Jdk 17 upgrades Change new Number(..) to Number.parse* and Number.valueOf Add null checks Sax parser updates Required Jaxb updates replaced finalize() in cleartk annotators Some updates just because I was in the class.